[build-system]
requires = ["maturin>=1.10,<2.0"]
build-backend = "maturin"

[tool.maturin]
# Module name matches actual wheel installation location
# The wheel installs as a top-level package _ic_candid_core (not under icp_candid namespace)
# because ic_candid_parser is a separate PyPI package
module-name = "_ic_candid_core._ic_candid_core"
# Ensure .pyi files are included in the package
include = ["**/*.pyi"]

[project]
name = "ic_candid_parser"
description = "Rust extension for parsing Candid DID files (part of icp-py-core)"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]
dynamic = ["version"]
